[package]
name = "rust-oracle-issue-13"
version = "0.1.0"
authors = ["kubo"]
edition = "2018"

[dependencies]
getopts = "0.2"
oracle = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi", "impl-default", "processthreadsapi", "psapi", "sysinfoapi",] }
